--- a/pages/future_workshops/2024-11-19.md
+++ b/pages/future_workshops/2024-11-19.md
@@ -1,30 +1,18 @@
 ---
-title: Installation
-description: How to start your website and use Petridish.
+title: Introduction to GADMA
+description: Virtual, 19 November 2024
 background:
-  img: https://images.unsplash.com/photo-1609456878306-592aa2bc0eed?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTJ8fGJpcmRzfGVufDB8MHwwfHw%3D&auto=format&fit=crop&crop=top&w=1200&h=600&q=80
-  by: William Foley
-  href: https://unsplash.com/photos/EysCLgycVgc
-permalink: /future_workshops/2024-11-18/
+  img:
+permalink: /future_workshops/2024-11-19/
 toc: true
 # tags: [tags are reserved for posts so this one will not show up]
 ---
 
-## Create a site from scratch (recommended)
+## Overview
 
-This method creates a clean repository without unnecessary files. You can then **add** more content and settings.
+Welcome to the virtual workshop on Demographic Inference using GADMA! This workshop is designed to introduce researchers to GADMA, a powerful command-line tool for the automatic inference of the joint demographic history of multiple populations from genetic data.
 
-1. Follow the [GitHub Pages instructions](https://pages.github.com/) to create a website on GitHub (select `Project site` and `Choose a theme`).
-2. Go to `_config.yml` in your repository and replace `theme: ...` with:
-
-    ```yml
-    remote_theme: peterdesmet/petridish@3.0
-    ```
-
-3. Check your site at `http://username.github.io/repository` (give it a minute to rebuild).
-4. See [configuration]({{ '/docs/configuration/' | relative_url }}) to add more elements to your site.
-
-## Create a site from the Petridish repository
+## Objectives
 
 This method gives you a copy of the Petridish repository and website. You can then **update** content and settings, and **remove** all the files you don't need.
 
@@ -45,6 +33,11 @@ This method gives you a copy of the Petridish repository and website. You can th
     screenshot.png
     ```
 
-## Install Petridish as gem-based theme
+## Registration
 
 If you do not what to use `remote_theme`, see the [Jekyll documentation](https://jekyllrb.com/docs/themes/#understanding-gem-based-themes) to install (gem-based) themes.
+
+
+## Contact
+
+If you have any questions, please send email to Ekaterina Noskova ([ekaterina.e.noskova@gmail.com(mailto:ekaterina.e.noskova@gmail.com))
