--- a/pages/future_workshops/2025-01-05.md
+++ b/pages/future_workshops/2025-01-05.md
@@ -2,9 +2,9 @@
 title: Configuration
 description: Overview of the configuration options in Petridish.
 background:
-  img: https://images.unsplash.com/photo-1507477338202-487281e6c27e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTkwfHxiaXJkc3xlbnwwfDB8MHx8&auto=format&fit=crop&crop=top&w=1200&h=600&q=80
-  by: Mathew Schwartz
-  href: https://unsplash.com/photos/5iFZBM7qgWc
+  img: https://conservationgenetics.org/wp-content/uploads/2024/02/DALL%C2%B7E-2024-02-26-15.37.02-Generate-an-image-of-a-cheetah-sprinting-across-the-savannah-in-the-style-of-impressionism.-The-cheetah-should-appear-more-realistic-with-less-exagger-1024x585.webp
+  by: DALLE (from ConGen website)
+  href: https://conservationgenetics.org
 permalink: /future_workshops/2025-01-05/
 toc: true
 ---
