--- a/pages/future_workshops/2025-01-05.md
+++ b/pages/future_workshops/2025-01-05.md
@@ -1,11 +1,11 @@
 ---
 title: Introduction to the Demograpic Inference
-description: Workshop as part of ConGen course
+description: Workshop as part of the ConGen course
 background:
   img: https://conservationgenetics.org/wp-content/uploads/2024/02/DALL%C2%B7E-2024-02-26-15.37.02-Generate-an-image-of-a-cheetah-sprinting-across-the-savannah-in-the-style-of-impressionism.-The-cheetah-should-appear-more-realistic-with-less-exagger-1024x585.webp
   by: DALLE (from ConGen website)
   href: https://conservationgenetics.org
-permalink: /future_workshops/2025-01-05/
+permalink: /future_workshops/2025-01-05-15/
 toc: true
 ---
 
