--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -30,14 +30,12 @@ We invite you to take part in a Workshop on Demographic Inference from genomic d
 * **Daniel Wegmann**, University of Fribourg
 * **Ekaterina Noskova**, University of Fribourg
 
-If you have any questions, please send email to Ekaterina Noskova (ekaterina.e.noskova@gmail.com)## Registration
-
 ## Registration
 
 Registration will open shortly. Please sign up to receive updates about the workshop.
 
-<a class="btn btn-primary btn-sm" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workship Updates</a>
+<a class="btn btn-outline-primary btn-block" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workship Updates</a>
 
 ## Contact
 
-If you have any questions, please send email to Ekaterina Noskova ([ekaterina.e.noskova@gmail.com(mailto:ekaterina.e.noskova@gmail.com))
+If you have any questions, please send email to Ekaterina Noskova ( [ekaterina.e.noskova\@gmail.com(mailto:ekaterina.e.noskova@gmail.com) )
