--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -11,6 +11,8 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
+<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workship Updates</a>
+
 ## Workshop Details
 
 * **Date & Time:** 18-19 November 2024
@@ -38,4 +40,4 @@ Registration will open shortly. Please sign up to receive updates about the work
 
 ## Contact
 
-If you have any questions, please send email to Ekaterina Noskova ([ekaterina.e.noskova@gmail.com](mailto:ekaterina.e.noskova@gmail.com))
+If you have any questions, please send email to Ekaterina Noskova ([ekaterina.e.noskova@gmail.com](mailto:ekaterina.e.noskova@gmail.com)).
