Update workshop info

--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -11,9 +11,13 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
-<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workship Updates</a>
+Registration is now open, please see details below. 
 
-## Workshop Details
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
+
+<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
+
+## Details
 
 * **Date & Time:** 18-19 November 2024
 * **Format:** Hybrid (On-site at the University & Online via Microsoft Teams)
@@ -21,11 +25,12 @@ We invite you to take part in a Workshop on Demographic Inference from genomic d
 * **Fee:** Free of charge
 * **Travel Grants:** Not available
 
-## What You Will Learn to
+## What You Will Learn
 
-* Prepare your low-depth sequencing data for demographic inference using ATLAS
-* Infer demographic history using fastsimcoal2
+* Prepare your sequencing data for demographic inference using ATLAS
 * Infer demographic history using GADMA
+
+We will provide you with a toy example dataset, but you are welcome to analize your own data!
 
 ## Organizers
 
@@ -34,9 +39,11 @@ We invite you to take part in a Workshop on Demographic Inference from genomic d
 
 ## Registration
 
-Registration will open shortly. Please sign up to receive updates about the workshop.
+Registration is now open! If you are interested but still unsure, you can sign up to receive updates about the workshop.
 
-<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workship Updates</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
+
+<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
 
 ## Contact
 
