Update workshop info

--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -39,10 +39,10 @@ We will provide you with a toy example dataset, but you are welcome to analize y
 
 ## Registration
 
-Registration is now open! If you are interested but still unsure, you can sign up to receive updates about the workshop.
-
+Registration is now open!
 <a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
 
+If you are interested but still unsure, you can sign up to receive updates about the workshop.
 <a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
 
 ## Contact
