--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -1,6 +1,6 @@
 ---
 title: Workshop on Demographic Inference
-description: Hybrid, 18-19 November 2024
+description: Online, 18-19 November 2024
 background:
   img: /assets/images/Fribourg.jpg
 permalink: /future_workshops/2024-11-18-19/
@@ -19,9 +19,9 @@ Registration is now open, please see details below.
 
 ## Details
 
-* **Date & Time:** 18-19 November 2024
-* **Format:** Hybrid (On-site at the University & Online via Microsoft Teams)
-* **Where:** University of Fribourg, Switzerland
+* **Date & Time:** 18-19 November 2024 (10 am - 5 pm)
+* **Format:** Online (via Microsoft Teams)
+* **Registration Deadline:** 3 November
 * **Fee:** Free of charge
 * **Travel Grants:** Not available
 
