--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -11,7 +11,7 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
-Registration is now open, please see details below. 
+Registration is now open till 3 Novermber, please see details below. 
 
 <a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
 
@@ -39,10 +39,12 @@ We will provide you with a toy example dataset, but you are welcome to analize y
 
 ## Registration
 
-Registration is now open!
+Registration is now open! Please register before 3 November 2024.
+
 <a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
 
 If you are interested but still unsure, you can sign up to receive updates about the workshop.
+
 <a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
 
 ## Contact
