--- a/pages/future_workshops/2024-11-18.md
+++ b/pages/future_workshops/2024-11-18.md
@@ -32,6 +32,14 @@ Registration is now open till 3 Novermber, please see details below.
 
 We will provide you with a toy example dataset, but you are welcome to analize your own data!
 
+## Session Timings
+
+The workshop will take place on 18 and 19 November, with two sessions each day:
+
+* **First session**: 10 am – 1 pm CET (9 am – 12 pm GMT / 4 am – 7 am EST / 5 pm – 8 pm UTC+8, China time)
+* **Lunch break**: 1 pm – 2 pm CET (12 pm – 1 pm GMT / 7 am – 8 am EST / 8 pm – 9 pm UTC+8, China time)
+* **Second session**: 2 pm – 5 pm CET (1 pm – 4 pm GMT / 8 am – 11 am EST / 9 pm – 12 am UTC+8, China time)
+
 ## Organizers
 
 * **Daniel Wegmann**, University of Fribourg
