--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -1,9 +1,9 @@
 ---
 title: Workshop on Demographic Inference
-description: Online, 18-19 November 2024
+description: Online, 17-19 November 2025
 background:
-  img: /assets/images/Fribourg.jpg
-permalink: /future_workshops/2024-11-18-19/
+  img: /assets/images/Edinburgh_2.jpg
+permalink: /workshops/2025-11-17-19/
 toc: true
 # tags: [tags are reserved for posts so this one will not show up]
 ---
@@ -11,19 +11,16 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
-Registration is now open till 3 Novermber, please see details below. 
+Registration is now open till 2 Novermber, please see details below. 
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
-
-<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
 
 ## Details
 
-* **Date & Time:** 18-19 November 2024 (10 am - 5 pm)
+* **Date & Time:** 17-19 November 2025 (10 am - 5 pm)
 * **Format:** Online (via Microsoft Teams)
-* **Registration Deadline:** 3 November
+* **Registration Deadline:** 2 November
 * **Fee:** Free of charge
-* **Travel Grants:** Not available
 
 ## What You Will Learn
 
@@ -34,7 +31,7 @@ We will provide you with a toy example dataset, but you are welcome to analize y
 
 ## Session Timings
 
-The workshop will take place on 18 and 19 November, with two sessions each day:
+The three-day workshop will take place on 17–19 November, with two sessions each day:
 
 * **First session**: 10 am – 1 pm CET (9 am – 12 pm GMT / 4 am – 7 am EST / 5 pm – 8 pm UTC+8, China time)
 * **Lunch break**: 1 pm – 2 pm CET (12 pm – 1 pm GMT / 7 am – 8 am EST / 8 pm – 9 pm UTC+8, China time)
@@ -47,13 +44,13 @@ The workshop will take place on 18 and 19 November, with two sessions each day:
 
 ## Registration
 
-Registration is now open! Please register before 3 November 2024.
+Registration is now open! Please register before 2 November 2025.
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/QR5Sq2cfzXrmuW8o8" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
 
-If you are interested but still unsure, you can sign up to receive updates about the workshop.
+If you are interested but still unsure, you can sign up to receive updates about the workshop and other future workshops.
 
-<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/edKkfAFmHWtW6iiMA" role="button">Sign Up for Workshop Updates</a>
+<a class="btn btn-outline-primary btn-lg" href="https://forms.gle/xD4518AKnFRWTTFMA" role="button">Sign Up for Workshop Updates</a>
 
 ## Contact
 
