--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -17,15 +17,17 @@ Registration is now open till 2 Novermber, please see details below.
 
 ## Details
 
-* **Date & Time:** 17-19 November 2025 (10 am - 5 pm)
+* **Date & Time:** 17-19 November 2025 (10 am - 5 pm CET)
 * **Format:** Online (via Microsoft Teams)
 * **Registration Deadline:** 2 November
 * **Fee:** Free of charge
 
 ## What You Will Learn
 
-* Prepare your sequencing data for demographic inference using ATLAS
-* Infer demographic history using GADMA
+* Prepare your sequencing data for demographic inference using [ATLAS](https://bitbucket.org/wegmannlab/atlas)
+* Build site frequency spectrum using [easySFS](https://github.com/isaacovercast/easySFS)
+* Work with demographic models using [demes](https://github.com/popsim-consortium/demes-python)
+* Infer demographic history using [GADMA](https://github.com/ctlab/GADMA)
 
 We will provide you with a toy example dataset, but you are welcome to analize your own data!
 
@@ -39,8 +41,8 @@ The three-day workshop will take place on 17–19 November, with two sessions ea
 
 ## Organizers
 
+* **Ekaterina Noskova**, University of Edinburgh
 * **Daniel Wegmann**, University of Fribourg
-* **Ekaterina Noskova**, University of Fribourg
 
 ## Registration
 
