Add workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -1,6 +1,6 @@
 ---
 title: Workshop on Demographic Inference using GADMA
-description: On-site, 18-19 October 2025
+description: University of Edinburgh, 18-19 October 2025
 background:
   img: /assets/images/Edinburgh_2.jpg
 permalink: /workshops/2025-10-18-19/
@@ -17,7 +17,7 @@ Registration is now open till 10 October, please see details below.
 
 ## Details
 
-* **Date & Time:** 18-19 October 2025 (10 am - 5 pm) with additional Q&A session on 20 October
+* **Date & Time:** 18-19 October 2025 (9:30 – 16:30) with additional Q&A session on 20 October
 * **Format:** On-site
 * **Where:** University of Edinburgh (Room details will be announced later)
 * **Registration Deadline:** 10 October
@@ -25,13 +25,13 @@ Registration is now open till 10 October, please see details below.
 
 ## What You Will Learn
 
-* Prepare your sequencing data for demographic inference
-* Build site frequency spectrum using [easySFS](https://github.com/isaacovercast/easySFS)
-* Work with demographic models using [demes](https://github.com/popsim-consortium/demes-python)
-* Infer demographic history using [GADMA](https://github.com/ctlab/GADMA)
+* **Demographic History Representation**: Start with [demes](https://github.com/popsim-consortium/demes-python) to visually and textually represent demographic histories, helping you interpret results and create clear, informative figures
+* **Data Preparation**: Learn how to prepare your sequencing data for effective demographic inference, ensuring accuracy and reliability in your analyses
+* **Site Frequency Spectrum Construction**: Use [easySFS](https://github.com/isaacovercast/easySFS) to build a site frequency spectrum, an informative summary statistic for demographic inference
+* **Demographic History Inference**: Apply [GADMA](https://github.com/ctlab/GADMA) to infer complex demographic histories
 
 You are welcome to analyze your own data (please see FAQ for the details).
-If you do not have any, we will provide a toy example dataset for practice.
+If you do not have any data, we will provide a toy example dataset for practice.
 
 
 ## Session Timings
