Add workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -42,29 +42,80 @@ The two-day workshop will take place on 18–19 October, with two sessions each 
 * **Lunch break**: 12:30 – 13:30
 * **Second session**: 13:30 – 16:30
 
-There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 11:30.
+There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 11:30, where you can discuss and ask questions about your results. 
 
 ## Approximate Schedule
 
-| **Date**   | **Time**      | **Activity**                                              |
-|------------|---------------|-----------------------------------------------------------|
-| **Oct 18** | 09:30 - 10:50 | Welcome, Introduction to Demes + Hands-on                 |
-|            | 10:50 - 11:10 | Break                                                     |
-|            | 11:10 - 12:30 | Preliminary Data Filtering and Analysis + Hands-on        |
-|            | 12:30 - 13:30 | Lunch Break                                               |
-|            | 13:30 - 14:50 | Building Site Frequency Spectrum with easySFS + Hands-on  |
-|            | 14:50 - 15:10 | Break                                                     |
-|            | 15:10 - 16:30 | Hands-on Session                                          |
-|------------|---------------|-----------------------------------------------------------|
-| **Oct 19** | 09:30 - 10:50 | Introduction to GADMA                                     |
-|            | 10:50 - 11:10 | Break                                                     |
-|            | 11:10 - 12:30 | Demographic Inference using GADMA + Hands-on              |
-|            | 12:30 - 13:30 | Lunch Break                                               |
-|            | 13:30 - 14:50 | Model Selection and Validation                            |
-|            | 14:50 - 15:10 | Break                                                     |
-|            | 15:10 - 16:30 | Hands-on Session                                          |
-|------------|---------------|-----------------------------------------------------------|
-| **Oct 20** | 09:30 - 11:30 | Q&A Session                                               |
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Time</th>
+    <th>Activity</th>
+  </tr>
+  <tr>
+    <td rowspan="8"><strong>Day 1: Oct 18</strong></td>
+    <td>09:30 - 10:50</td>
+    <td>Welcome, Introduction to Demes + Hands-on</td>
+  </tr>
+  <tr>
+    <td>10:50 - 11:10</td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>11:10 - 12:30</td>
+    <td>Preliminary Data Filtering and Analysis + Hands-on</td>
+  </tr>
+  <tr>
+    <td>12:30 - 13:30</td>
+    <td>Lunch Break</td>
+  </tr>
+  <tr>
+    <td>13:30 - 14:50</td>
+    <td>Building Site Frequency Spectrum with easySFS + Hands-on</td>
+  </tr>
+  <tr>
+    <td>14:50 - 15:10</td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>15:10 - 16:30</td>
+    <td>Hands-on Session</td>
+  </tr>
+  <tr>
+    <td rowspan="8"><strong>Day 2: Oct 19</strong></td>
+    <td>09:30 - 10:50</td>
+    <td>Introduction to GADMA</td>
+  </tr>
+  <tr>
+    <td>10:50 - 11:10</td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>11:10 - 12:30</td>
+    <td>Demographic Inference using GADMA + Hands-on</td>
+  </tr>
+  <tr>
+    <td>12:30 - 13:30</td>
+    <td>Lunch Break</td>
+  </tr>
+  <tr>
+    <td>13:30 - 14:50</td>
+    <td>Model Selection and Validation</td>
+  </tr>
+  <tr>
+    <td>14:50 - 15:10</td>
+    <td>Break</td>
+  </tr>
+  <tr>
+    <td>15:10 - 16:30</td>
+    <td>Hands-on Session</td>
+  </tr>
+  <tr>
+    <td><strong>Day 3: Oct 20</strong></td>
+    <td>09:30 - 11:30</td>
+    <td>Q&A Session</td>
+  </tr>
+</table>
 
 ## Organizer
 
@@ -86,7 +137,6 @@ Please bring a VCF file to the workshop.
 **Important:** 
 - Do not filter the VCF file beforehand; we will learn how to filter it together during the workshop.
 - If you have a large VCF file, such as whole-genome data, consider using a portion, like one chromosome, to start. Once you are comfortable, you can run the analyses on the full VCF file.
-
 
 ### Do I need a laptop or a server?
 
