Update workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -1,9 +1,9 @@
 ---
 title: Workshop on Demographic Inference using GADMA
-description: University of Edinburgh, 18-19 October 2025
+description: University of Edinburgh, 16-17 October 2025
 background:
   img: /assets/images/Edinburgh_2.jpg
-permalink: /workshops/2025-10-18-19/
+permalink: /workshops/2025-10-16-17/
 toc: true
 # tags: [tags are reserved for posts so this one will not show up]
 ---
@@ -17,7 +17,7 @@ Registration is now open till 10 October, please see details below.
 
 ## Details
 
-* **Date & Time:** 18-19 October 2025 (9:30 – 16:30) with additional Q&A session on 20 October
+* **Date & Time:** 16-17 October 2025 (9:30 – 16:30) with additional Q&A session on 20 October
 * **Format:** On-site
 * **Where:** University of Edinburgh (Room details will be announced later)
 * **Registration Deadline:** 10 October
@@ -36,7 +36,7 @@ If you do not have any data, we will provide a toy example dataset for practice.
 
 ## Session Timings
 
-The two-day workshop will take place on 18–19 October, with two sessions each day:
+The two-day workshop will take place on 16–17 October, with two sessions each day:
 
 * **First session**: 9:30 – 12:30
 * **Lunch break**: 12:30 – 13:30
@@ -53,7 +53,7 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
     <th>Activity</th>
   </tr>
   <tr>
-    <td rowspan="8"><strong>Day 1: Oct 18</strong></td>
+    <td rowspan="8"><strong>Day 1: Oct 16</strong></td>
     <td>09:30 - 10:50</td>
     <td>Welcome, Introduction to Demes + Hands-on</td>
   </tr>
@@ -82,7 +82,7 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
     <td>Hands-on Session</td>
   </tr>
   <tr>
-    <td rowspan="8"><strong>Day 2: Oct 19</strong></td>
+    <td rowspan="8"><strong>Day 2: Oct 17</strong></td>
     <td>09:30 - 10:50</td>
     <td>Introduction to GADMA</td>
   </tr>
@@ -136,7 +136,7 @@ Please bring a VCF file to the workshop.
 
 **Important:** 
 - Do not filter the VCF file beforehand; we will learn how to filter it together during the workshop.
-- If you have a large VCF file, such as whole-genome data, consider using a portion, like one chromosome, to start. Once you are comfortable, you can run the analyses on the full VCF file.
+- If you have a large VCF file, such as whole-genome data, consider starting with a smaller portion, like one chromosome. Once you have practiced with a smaller dataset, you can run the full analysis on the complete VCF file over the weekend, allowing you to validate results during the additional session on October 20.
 
 ### Do I need a laptop or a server?
 
@@ -146,10 +146,6 @@ You can use either a laptop or a server for all tasks. Our toy example can be ru
 
 Detailed instructions on the necessary tools and installation will be sent one to two weeks before the workshop. It is important to have the tools installed beforehand to maximize our time during the sessions.
 
-### Will there be any hands-on exercises?
-
-Yes, the workshop includes hands-on sessions where you can apply the techniques learned during the lectures.
-
 ### What skills are required?
 
 Basic command line knowledge is reqiured, as we will use command line tools during the workshop.
@@ -158,7 +154,6 @@ Basic command line knowledge is reqiured, as we will use command line tools duri
 
 The additional Q&A session on Monday allows participants to discuss any remaining questions, receive clarifications, and review results.
 You can run demographic inference on a cluster over the weekend, and we will check the results together on Monday.
-
 
 ### Will there be materials available after the workshop?
 
