Update workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -13,7 +13,7 @@ We invite you to take part in a Workshop on Demographic Inference using GADMA!
 
 Registration is now open till 10 October, please see details below. 
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/XKbEjHaaDHGb8NBE6" role="button">REGISTER HERE</a>
 
 ## Details
 
@@ -30,7 +30,7 @@ Registration is now open till 10 October, please see details below.
 * **Site Frequency Spectrum Construction**: Use [easySFS](https://github.com/isaacovercast/easySFS) to build a site frequency spectrum, an informative summary statistic for demographic inference
 * **Demographic History Inference**: Apply [GADMA](https://github.com/ctlab/GADMA) to infer complex demographic histories
 
-You are welcome to analyze your own data (please see FAQ for the details).
+You are welcome to analyse your own data (please see FAQ for the details).
 If you do not have any data, we will provide a toy example dataset for practice.
 
 
@@ -125,13 +125,13 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
 
 Registration is now open! Please register before 10 October 2025.
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.gle/XKbEjHaaDHGb8NBE6" role="button">REGISTER HERE</a>
 
 ## FAQ
 
 ### Can I use my own data?
 
-Yes, you are welcome to analyze your own data.
+Yes, you are welcome to analyse your own data.
 Please bring a VCF file to the workshop.
 
 **Important:** 
