Update workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -10,6 +10,7 @@ toc: true
 
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference using GADMA!
+This workshop is exclusively for colleagues and students from the University of Edinburgh.
 
 Registration is now open till 10 October, please see details below. 
 
