--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -120,7 +120,7 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
 
 ## Organizer
 
-* **Ekaterina Noskova**, University of Edinburgh
+* [Ekaterina Noskova](https://enoskova.me/), University of Edinburgh
 
 ## Registration
 
