Update workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -121,6 +121,7 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
 ## Organizer
 
 * [Ekaterina Noskova](https://enoskova.me/), University of Edinburgh
+* [Konrad Lohse](https://sites.google.com/view/lohselab/people/konrad-lohse), University of Edinburgh
 
 ## Registration
 
