Update workshop in Edinburgh

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -23,6 +23,7 @@ Registration is now open till 10 October, please see details below.
 * **Where:** University of Edinburgh (Room details will be announced later)
 * **Registration Deadline:** 10 October
 * **Fee:** Free of charge
+* **Capacity:** Limited to 20 participants
 
 ## What You Will Learn
 
