Update workshop in Novermber

--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -11,7 +11,7 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
-Registration is now open till 2 Novermber, please see details below. 
+Registration is open untill 2 Novermber, please see details below. 
 
 <a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
 
@@ -25,11 +25,11 @@ Registration is now open till 2 Novermber, please see details below.
 ## What You Will Learn
 
 * Prepare your sequencing data for demographic inference using [ATLAS](https://bitbucket.org/wegmannlab/atlas)
-* Build site frequency spectrum using [easySFS](https://github.com/isaacovercast/easySFS)
-* Work with demographic models using [demes](https://github.com/popsim-consortium/demes-python)
+* Build site frequency spectrum with [easySFS](https://github.com/isaacovercast/easySFS)
+* Work with demographic histories using [demes](https://github.com/popsim-consortium/demes-python)
 * Infer demographic history using [GADMA](https://github.com/ctlab/GADMA)
 
-We will provide you with a toy example dataset, but you are welcome to analize your own data!
+We will provide you with a toy example dataset, but you are welcome to analyse your own data (please see FAQ for details)!
 
 ## Session Timings
 
@@ -54,6 +54,34 @@ If you are interested but still unsure, you can sign up to receive updates about
 
 <a class="btn btn-outline-primary btn-lg" href="https://forms.gle/xD4518AKnFRWTTFMA" role="button">Sign Up for Workshop Updates</a>
 
+## FAQ
+
+### Can I use my own data?
+
+Yes, you are welcome to analyse your own data.
+Please bring a VCF file to the workshop.
+
+**Important:** 
+- Do not filter the VCF file beforehand; we will learn how to filter it together during the workshop.
+- If you have a large VCF file, such as whole-genome data, consider starting with a smaller portion, like one chromosome. Once you have practiced with a smaller dataset, you can run the full analysis on the complete VCF file.
+
+### Do I need a laptop or a server?
+
+You can use either a laptop or a server for all tasks. Our toy example dataset and most hands-on activities are easier to run on a laptop. Ensure the necessary software is installed beforehand.
+
+### What software do I need to install?
+
+Detailed instructions on the necessary tools and installation will be sent one to two weeks before the workshop. It is important to have the tools installed beforehand to maximize our time during the sessions.
+
+### What skills are required?
+
+Basic command line knowledge is required, as we will use command line tools during the workshop.
+
+### Will there be materials available after the workshop?
+
+Yes, all workshop materials and recordings will be shared with participants afterwards.
+
+
 ## Contact
 
-If you have any questions, please send email to Ekaterina Noskova ([ekaterina.e.noskova@gmail.com](mailto:ekaterina.e.noskova@gmail.com)).
+If you have any questions, please email Ekaterina Noskova ([ekaterina.e.noskova@gmail.com](mailto:ekaterina.e.noskova@gmail.com)).
