Update workshop in Novermber

--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -11,7 +11,7 @@ toc: true
 ## Overview
 We invite you to take part in a Workshop on Demographic Inference from genomic data!
 
-Registration is open untill 2 Novermber, please see details below. 
+Registration is open until 2 Novermber, please see details below. 
 
 <a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
 
