Change form to microsoft form

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -14,7 +14,7 @@ This workshop is exclusively for colleagues and students at IEE.
 
 Registration is limited to a maximum of 20 places (first come, first served) and is open untill 10 October, please see details below.
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/XKbEjHaaDHGb8NBE6" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.office.com/e/3LZkxRSUWz" role="button">REGISTER HERE</a>
 
 ## Details
 
@@ -128,7 +128,7 @@ There will be an **additional Q&A session** on Monday, October 20, from 9:30 to 
 
 Registration is now open! Please register before 10 October 2025.
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/XKbEjHaaDHGb8NBE6" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.office.com/e/3LZkxRSUWz" role="button">REGISTER HERE</a>
 
 ## FAQ
 
