Change form to microsoft form

--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -13,7 +13,7 @@ We invite you to take part in a Workshop on Demographic Inference from genomic d
 
 Registration is open until 2 Novermber, please see details below. 
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.office.com/e/Z2VPG6R5UJ" role="button">REGISTER HERE</a>
 
 ## Details
 
@@ -48,7 +48,7 @@ The three-day workshop will take place on 17–19 November, with two sessions ea
 
 Registration is now open! Please register before 2 November 2025.
 
-<a class="btn btn-outline-success btn-lg" href="https://forms.gle/bfezUSh81jn7aJy27" role="button">REGISTER HERE</a>
+<a class="btn btn-outline-success btn-lg" href="https://forms.office.com/e/Z2VPG6R5UJ" role="button">REGISTER HERE</a>
 
 If you are interested but still unsure, you can sign up to receive updates about the workshop and other future workshops.
 
