Add source to refresh command line knowledge

--- a/pages/workshops/2025-10-16.md
+++ b/pages/workshops/2025-10-16.md
@@ -152,6 +152,7 @@ Detailed instructions on the necessary tools and installation will be sent one t
 ### What skills are required?
 
 Basic command line knowledge is required, as we will use command line tools during the workshop.
+Need a refresher? Check out our course available at [http://fribash.netlify.app/](http://fribash.netlify.app/).
 
 ### What is the purpose of the Q&A session on Monday?
 
