--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -67,7 +67,9 @@ Please bring a VCF file to the workshop.
 
 ### Do I need a laptop or a server?
 
-You can use either a laptop or a server for all tasks. Our toy example dataset and most hands-on activities are easier to run on a laptop. Ensure the necessary software is installed beforehand.
+You can use either a laptop or a server for all tasks. Our toy example dataset and most hands-on activities are easier to run on a laptop.
+Your laptop should run either a) Linux, b) macOS, or c) Windows with WSL. Instructions for setting up WSL are provided in the course [here](http://fribash.netlify.app/).
+Ensure the necessary software is installed beforehand.
 
 ### What software do I need to install?
 
@@ -76,6 +78,7 @@ Detailed instructions on the necessary tools and installation will be sent one t
 ### What skills are required?
 
 Basic command line knowledge is required, as we will use command line tools during the workshop.
+Need a refresher? Check out our course available at [http://fribash.netlify.app/](http://fribash.netlify.app/).
 
 ### Will there be materials available after the workshop?
 
