--- a/pages/workshops/2025-11-17.md
+++ b/pages/workshops/2025-11-17.md
@@ -68,7 +68,7 @@ Please bring a VCF file to the workshop.
 ### Do I need a laptop or a server?
 
 You can use either a laptop or a server for all tasks. Our toy example dataset and most hands-on activities are easier to run on a laptop.
-Your laptop should run either a) Linux, b) macOS, or c) Windows with WSL. Instructions for setting up WSL are provided in the course [here](http://fribash.netlify.app/).
+Your laptop should run either a)&nbsp;Linux, b)&nbsp;macOS, or c)&nbsp;Windows with WSL. Instructions for setting up WSL are provided in the course [here](http://fribash.netlify.app/).
 Ensure the necessary software is installed beforehand.
 
 ### What software do I need to install?
